# fdim

./: .travis.yml  BitmapFractal.cc  BitmapFractal.h  BitmapView.cc  BitmapView.h  CMakeLists.txt  FdimFrame.cc  FdimFrame.h  Info.plist  Line.cc  Line.h  LineView.cc  LineView.h  Makefile.darwin  Makefile.mingw  README.md  fdim.cc  fdim.dev  fdim.layout  package.sh  utils.h
matlab/: getFD.m  getProbFD.m  test.m  tileImg.m
src/: BitmapFractal.cc  BitmapFractal.h  BitmapView.cc  BitmapView.h  FdimFrame.cc  FdimFrame.h  Info.plist  Line.cc  Line.h  LineView.cc  LineView.h  Makefile  Makefile.darwin  Makefile.linux  fdim.cc  utils.h
